# Practical-guide-to-implement-OpenRMF-in-multi-robot-environments

project_assets/: CMakeLists.txt  package.xml
project_config/: CMakeLists.txt  package.xml
project_config/config/eps1/: tinyrobot_config.yaml  tinyrobot_config_2.yaml
project_config/config/test1/: tinyRobot_config.yaml
project_config/config/test2/: tinyRobot_config.yaml
project_config/launch/: common.launch.xml  dashboard.launch.xml  eps1.launch.xml  test1.launch.xml  test2.launch.xml
project_dashboard/: CMakeLists.txt  package.xml
project_dashboard/eps1/: dashboard_config.json
project_fleet_adapter/: package.xml  setup.cfg  setup.py
project_fleet_adapter/launch/: fleet_adapter.launch.xml
project_fleet_adapter/project_fleet_adapter/: RobotClientAPI.py  fleet_manager.py
project_maps/: CMakeLists.txt  package.xml
project_maps/maps/eps1/: eps1.building.yaml
project_maps/maps/test1/: test1.building.yaml
project_maps/maps/test2/: test2.building.yaml
project_panel/: package.xml  setup.cfg  setup.py
project_panel/project_panel/: dispatcher_client.py  simple_api_server.py
project_simulation/: CMakeLists.txt  package.xml
project_simulation/launch/: eps1.launch.xml  simulation.launch.xml  test1.launch.xml  test2.launch.xml
project_tasks/: README.md  package.xml  setup.cfg  setup.py
project_tasks/project_tasks/: airport_docker_config.yaml  hotel_cleaner_config.yaml
