<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_fleet_adapter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joel.romero97@outlook.com">takukan</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rmf_fleet_adapter_python</exec_depend>

  <depend>rclpy</depend>
  <depend>rmf_fleet_msgs</depend>
  <depend>rmf_task_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
